[UTF-8][Japanese]

*Ver3.0 RC1 : 2015/xx/xx

-システムモード非対応テーマを管理画面で使用しようとする時、警告を表示するようにした。
-表示パスワード機能やメンテナンスモードでの画面に、適切なHTTPステータスコードを設定した。
-【fix】印刷用表示で FrontPage 機能が動作していなかった。
-【fix】印刷用テーマ satsuki2/_print においてデザイン編集の設定を解除していなかった。
-【fix】ヘッダのタイトル文字位置がブログ表示時とデザイン編集時で異なる。

*Ver3.0β5 : 2015/05/02

-スマホ表示に対応しました。USER_AGENTで判別しています。((管理画面の細かいチューニングは別として、とりあえず読むには困らないと思います。))
-記事メイン部とコメント欄のデザイン編集機能を付けました。((これに伴いメイン部のデザインは再設定してください。))
-それに伴い基本設定→表示設定がなくなりました。
-[http://adiary.org/ver2to3.html:Version2 からの移行機能]が付きました。
-theme/ ディレクトリ以下にテーマやテンプレートに無関係なものが増えてきたので、それらを pub-dist/ に移動しました。
-テーマの色変更機能で「設定できる色が多すぎる」問題に対処するため、色をいくつかの基本色に連動させて動かす機能を付けました。
-表示パスワード機能を付けました。ブログの表示にパスワードをかける機能です。
-プライベートブログ時に「秘密のパスワード」を入力することでブログを表示できる機能を追加。
-システム管理にメンテナンスモードを実装しました。
-【記法】目次記法の機能を拡張し、出力階層を選択できるようにしました（{{[*toc0] [*toc2]}}の追加）。
-【plugin】タイトル文字の表示位置調整が非常に分かりにくかったので設定方法を見直しました。
-【plugin】ヘッダとメイン部用の検索ボックスモジュールを用意しました。
-【plugin】サイドバー検索ボックスのHTML形式を変更しました。（雑多なidを削除しました）
-【plugin】module_id の仕様を変更しました（β3の時の仕様に戻しました）。
-【fix】プライベートモードを解除したとき、公開ディレクトリが複雑な名前のままになっている。
-【fix】「ブログとwikiコンテンツ等を分離して扱う」にチェックを入れるとコンテンツページが検索にヒットしない。（[http://adiary.blog.abk.nu/0358#c655:Thanks to 手石]）
-【fix】theme/以下のテンプレート読み込み機能がうまく動作していなかった。なおVer3の[bf:テンプレートディレクトリ名は _skel/ です]（[http://adiary.blog.abk.nu/0358#c655:Thanks to 手石]）
-【fix】シンタックスハイライトがうまく動作しない。
-【fix】【plugin】プライベートブログ切替時に、デザインモジュールで使用していた背景画像が表示できなくなる。
-【fix】【アルバム】大文字の拡張子（.JPG等）を画像ファイルと識別できない。
-【fix】【Compiler】{{<@ifcall(cond, 'file')>}} 等で cond が false のとき、condの値が出力されてしまう。

*Ver3.0β4 : 2015/03/05

-[bf:デザイン編集でサイドバー以外も編集できるようになりました]。
-[bf:テーマカラーリングをカスタマイズする機能を付けました]。（対応テーマのみ）
-記法の[http://adiary.org/v3man/Satsuki-detail/escape:エスケープ表記動作]を整理しました。
-記法ヘルパー機能を付けました。
-確認ダイアログをブラウザ標準の「confirm」からオリジナルに変更しました。
-JPEGのExifを記事に貼り付けられるようになりました。
-自動リロード画面でEnterを押すと強制リロードするようにしました。
-同一の記事を複数の人やタブで編集した際に確認メッセージを出す機能を付けました。[em:デフォルトでは無効になっています]（システム設定にあります）。
-記事編集画面からの画像選択画面にスクロールバーが表示されるように変更しました。
-デザイン編集画面の編集ツールの位置を変更しました。
-Twitterへの投稿通知機能をプラグイン化しました。
-faviconが設定できるようになりました。