@@ -3,7 +3,7 @@
 <@local(s,ps)>
 <$s=v.blog>
 
-<!--カスタムサイドバー===================================================-->
+<@><!--カスタムサイドバー===================================================-->
 <@ifexec(v.sidebar_html, begin)>
 <aside id="sidebar">
 <@v.sidebar_html>
@@ -11,7 +11,6 @@
 <$break(0)>
 <$end>
 
-<!--サイドバー==========================================================-->
 <aside id="sidebar">
 <div id="side-a">
 
