@@ -48,6 +48,7 @@ select {
 }
 #iframe {
 	width:			100%;
+	padding:		0;
 	min-height:		0;
 	overflow-x:		hidden;
 	overflow-y:		scrollbar;
@@ -79,6 +80,8 @@ select {
 <button id="save-btn" type="button">保存</button>
 <button id="back-btn" type="button" onclick="window.location='<@v.myself>?<@v.skel_dir>'">戻る</button>
 <input type="checkbox" id="display-modules" class="js-save"><label>表示</label>
+&nbsp;
+<button type="button" id="readme-button" class="js-info" data-title="テーマのREADME" data-url="<@v.myself>?design/theme_readme&name=<@s.theme>" data-class="pre">テーマの情報</button>
 </form>
 
 
