@@ -13,7 +13,7 @@
 <div class="body">
 
 	<ul class="menu">
-		<li><a href="<@v.myself>?<@v.skel_dir>theme">テーマ選択</a></li>
+		<li><a href="<@v.myself>?<@v.skel_dir>theme">テーマ選択（配色）</a></li>
 		<li><a href="<@v.myself>?<@v.skel_dir>edit">デザイン編集</a></li>
 		<li><a href="<@v.myself>?<@v.skel_dir>reset">デザインの初期化</a></li>
 		<li><a href="<@v.myself>?<@v.skel_dir>usercss">ユーザーCSS</a></li>
