@@ -49,6 +49,7 @@ button {
 }
 #iframe {
 	width:			100%;
+	padding:		0;
 	min-height:		0;
 	overflow-x:		hidden;
 	overflow-y:		scrollbar;
