@@ -4,9 +4,11 @@
 
 -システムモード非対応テーマを管理画面で使用しようとする時、警告を表示するようにした。
 -表示パスワード機能やメンテナンスモードでの画面に、適切なHTTPステータスコードを設定した。
+-スマホ判別に、BlackBerry と Windows Phone を加えました。
 -【fix】印刷用表示で FrontPage 機能が動作していなかった。
 -【fix】印刷用テーマ satsuki2/_print においてデザイン編集の設定を解除していなかった。
 -【fix】ヘッダのタイトル文字位置がブログ表示時とデザイン編集時で異なる。
+-他
 
 *Ver3.0β5 : 2015/05/02
 
